[package]
name = "memuse"
description = "Traits for inspecting memory usage of structs"
version = "0.0.0"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
documentation = "https://docs.rs/memuse/"
homepage = "https://github.com/str4d/memuse"
repository = "https://github.com/str4d/memuse"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
nonempty = { version = "0.7", optional = true }
